feat: hide redundant button

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -122,13 +122,13 @@
             </form>
             Receiving XXX goNEAR on Algorand Account YYY
             <br />
-            <button
+            <!-- <button
               id="burn-confirm"
               class="clickBtn"
               onclick="checkOptedIn($('input#mint_to').val(),{showAlert: true})"
             >
               checkOptedIn
-            </button>
+            </button> -->
             <button
               id="near-request-transfer"
               class="clickBtn"
