--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,11 +1,7 @@
 <!-- This page is a simple frontend to show instruction and to run API calls -->
-<!-- TODO: dynamically remove default values -->
-<!-- TODO: what if NEAR RPC is down? https://status.nearprotocol.com/ -->
-<!-- TODO: 2. before mint, user should opt in to goNEAR ASA [check with code] -->
-<!-- TODO: 3. before API call, user should make a transaction, and use the returned txnId -->
-<!-- TODO: 4. on button click: pass 4 params(to,from,amount,txnId) to API in server.ts -->
 
-<!-- TODO: input place holder, upto 10 digits, address -->
+<!-- TODO: what if NEAR RPC is down? https://status.nearprotocol.com/ -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,7 +15,12 @@
   <body>
     <header>
       <h1>Algorand - NEAR Bridge</h1>
-      <p>Demo Page of the Algorand Bridge for NEAR</p>
+      <p>
+        Demo Page of the Algorand Bridge for NEAR.
+        <br />
+        To use our API, please check
+        <a href="/frontend/help.html">help page</a>
+      </p>
       <label>
         <input
           type="checkbox"
