--- a/src/frontend/test.html
+++ b/src/frontend/test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script>
-      alert(1);
+      alert('<%= passedVariable %>');
     </script>
 
     <title>Test page</title>
