ref: change param name

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -78,7 +78,7 @@
         </div>
 
         <div id="mint" role="tab-panel">
-          <div role="left-column">
+          <div>
             <br />
             <br />
             <form>
